Added extra objective.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                             <li class="objectif"><a class="page-scroll" href="#toon">Toon Shading</a></li>
                             <li class="objectif"><a class="page-scroll" href="#pain">Painterly Rendering</a></li>
                             <li class="objectif"><a class="page-scroll" href="#final">Final Scene</a></li>
+                            <li class="objectif"><a class="page-scroll" href="#extra">Extra</a></li>
                         </ul>
                     </li>
                     <!-- <li>
@@ -301,6 +302,26 @@
         </div>
         <div class="row text-center">
             <div class="col-md-12 col-xs-12"><img class="img-responsive center-block" src="img/toon.gif" alt="toon gif" /></div>
+        </div>
+    </section>
+
+    <!-- Extras -->
+    <section id="extras" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h2>Extra: Parallel Rendering</h2>
+                <p>Rendering 500x500 macho cows with bounding box acceleration:
+                    <br> ( real time obtained using the time cmd )
+                    <br>1 thread: 96.26s
+                    <br>2 threads: 51.60s
+                    <br>4 threads: 29.70s
+                    <br>8 threads: 21.25s
+                    <br>16 threads: 23.68s
+                </p>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-md-12 col-xs-12"><img class="img-responsive center-block" src="img/macho-cows.png" alt="macho cows" /></div>
         </div>
     </section>
 
