Fixed extra id.

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     </section>
 
     <!-- Extras -->
-    <section id="extras" class="container content-section text-center">
+    <section id="extra" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h2>Extra: Parallel Rendering</h2>
