--- a/index.html
+++ b/index.html
@@ -279,12 +279,11 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h2>Painterly Rendering</h2>
-                <p>Based on Hertzmann's <i>Painterly Rendering with Curved Brush Strokes of Multiple Sizes</i> (1998).
-                    <br></p>
+                <p>Based on Hertzmann's <i>Painterly Rendering with Curved Brush Strokes of Multiple Sizes</i> (1998).</p>
             </div>
         </div>
         <div class="row text-center">
-            <div class="col-md-6 col-xs-12"><img class="img-responsive center-block" src="img/paint-tol.png" alt="high tolerance" /></div>
+            <div class="col-md-6 col-xs-12"><img class="img-responsive center-block" src="img/toon-normal.png" alt="original" /></div>
             <div class="col-md-6 col-xs-12"><img class="img-responsive center-block" src="img/paint-small.png" alt="small brushes" /></div>
         </div>
     </section>
