--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h2>Glossy Reflection</h2>
                 <p>Random sample taken based on polar/azimuth angles of reflected ray.
-                    <br>Colour of sample rays weighted based on cosine probabilty distribution.</p>
+                    <br>Colour of sample rays weighted based on cosine power distribution.</p>
             </div>
         </div>
         <div class="row text-center">
